# -social-blogging-app

./: README.md  package-lock.json
ChatbotBackend/social_blogging_app/: .gitignore  Dockerfile  README.md  docker-compose.yml  draft_blog_post.txt  edited_blog_post.txt  pyproject.toml  requirements.txt  trend_report.txt
ChatbotBackend/social_blogging_app/app/: main.py
ChatbotBackend/social_blogging_app/knowledge/: ai_marketing.md  ai_mrketing.md  examples_of_good_hooks.md  industrial_insights_ai_bloggers.md  industry_insights_ai_bloggers.md  platform_guidelines_twitter.md  platform_uideline_twitter.md  seo_best_practices.txt  social_media_tips.md  tone_guidelines.txt  user_preference.txt
ChatbotBackend/social_blogging_app/logs/: blog_20250803051909.txt  blog_20250803052404.txt  blog_20250803054933.txt  blog_20250803073607.txt  blog_20250803081028.txt  blog_20250803102530.txt  blog_20250803103225.txt  blog_20250803103514.txt  blog_20250803103857.txt  blog_20250803124135.txt  blog_20250804002125.txt  blog_20250804004820.txt  blog_20250804012304.txt  blog_20250804012822.txt  blog_20250804013436.txt  blog_20250804015731.txt  blog_20250804021212.txt  blog_20250804023649.txt  blog_20250804025308.txt  blog_20250804031808.txt  blog_20250804033220.txt  blog_20250804033847.txt  blog_20250804142503.txt  blog_20250804145130.txt  blog_20250805043452.txt  blog_20250805054602.txt  blog_20250805084724.txt  blog_20250805090919.txt  blog_20250805092201.txt  blog_20250805112103.txt  blog_20250805143636.txt  blog_20250805173235.txt  blog_20250805200132.txt  blog_20250805202049.txt  (+49 more)
(+92 files in other folders)
