[project]
name = "social_blogging_ai"
version = "0.1.0"
description = "An AI agent crew for social media blogging."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.40.0",
    "crewai-tools>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.8.0",
    "langchain-groq>=0.1.4",
    "langchain-google-genai>=0.1.2",
    "pysbd>=0.3.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
